# event-snap

./: .gitignore  .pnp.cjs  Anchor.toml  README.md  package-lock.json  package.json
programs/event-snap/: Cargo.toml
programs/event-snap-lib/: Cargo.toml
programs/event-snap-lib/src/: lib.rs  utiles.rs
programs/event-snap/src/: lib.rs
programs/event-snap/src/interfaces/: mod.rs
programs/event-snap/src/structs/: event.rs  event_buffer.rs  mod.rs
programs/event-span/: Cargo.toml
programs/event-span/src/: lib.rs  macros.rs  utiles.rs
programs/event-span/src/interfaces/: create_event.rs
programs/event-span/src/structs/: event.rs  mod.rs  state.rs
tests/: event-snap.spec.ts  event-span.spec.ts  event-span.ts  utiles.ts
